<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#F0F0F0"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        android:text="@string/q_activity"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_true"
            android:textColor="#000000" />
        <Button
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_false"
            android:textColor="#000000"/>
    </LinearLayout>
    <Button
        style="@style/Widget.AppCompat.Button"
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:textColor="#000000"/>

    <Button
        style="@style/Widget.AppCompat.Button"
        android:id="@+id/prompt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_prompt"
        android:textColor="#000000" />
</LinearLayout>